--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ hr {
 	width:100%;
 	position:relative;
 	
-	background: url(img/mike2.jpg) no-repeat top center;
+	background: url(img/Mike2.jpg) no-repeat top center;
 }
 
 #intro.intro {
